fixed alignment issues

--- a/styles/Esperanto.module.css
+++ b/styles/Esperanto.module.css
@@ -9,8 +9,8 @@
 
 .card {
   flex: 1;
-  padding: 50px;
-  padding-right: 0px;
+  padding: 15px;
+
   position: relative;
 }
 
@@ -33,4 +33,19 @@
   border-radius: 50px;
   width: 25px;
   height: 25px;
+}
+
+.quote {
+  margin: 15px;
+  font-size: 24px;
+}
+
+.text {
+  background: linear-gradient(rgb(9, 34, 15), rgb(183, 228, 198));
+  position: relative;
+  padding: 15px;
+  margin: 0;
+  color: #fff;
+  border-radius: 15px;
+  text-align: right;
 }
