--- a/styles/FirstLook.module.css
+++ b/styles/FirstLook.module.css
@@ -14,14 +14,18 @@
 
 .card {
   flex: 1;
-  padding: 50px;
+  padding: 30px;
   padding-right: 0px;
+  text-align: center;
 }
 
+.contact {
+  position: relative;
+}
 .title {
   font-size: 20px;
   margin: 0;
-  text-align: left;
+  text-align: center;
   font-family: Georgia, "Times New Roman", Times, serif;
   text-shadow: 3px 3px #72b191;
   padding-bottom: 15px;
